@@ -1,8 +1,6 @@
 package com.example.ticket.core.application.service;
 
-import com.example.ticket.core.application.dto.query.SeatQuery;
-import com.example.ticket.core.application.dto.query.SeatView;
-import com.example.ticket.core.application.dto.query.ZoneSeatsView;
+import com.example.ticket.core.application.port.out.SeatQueryPort.SeatView;
 import com.example.ticket.core.application.port.in.SeatQueryInPort;
 import com.example.ticket.core.application.port.out.SeatQueryPort;
 import com.example.ticket.core.application.port.out.SessionPort;
@@ -14,6 +12,7 @@ import reactor.core.publisher.Mono;
 
 import java.util.Comparator;
 import java.util.List;
+import java.util.UUID;
 import java.util.stream.Collectors;
 
 @Service
@@ -25,32 +24,38 @@ public class SeatQueryService implements SeatQueryInPort {
 
     @Override
     public Mono<List<ZoneSeatsView>> execute(SeatQuery query) {
-        // 1. Validate session
-        return sessionPort.validateSession(query.eventId(), query.scheduleId().toString(), query.sessionId())
+        return sessionPort.validateSession(toValidateQuery(query))
                 .switchIfEmpty(Mono.error(new BusinessException(ErrorCode.SESSION_TOKEN_INVALID)))
-                .then(
-                        // 2. Refresh session TTL
-                        sessionPort.refreshSession(query.eventId(), query.scheduleId().toString(), query.sessionId())
-                )
-                .then(
-                        // 3. Query seats with status
-                        seatQueryPort.findAllBySchedule(UUID.fromString(query.eventId()), query.scheduleId())
+                .then(sessionPort.refreshSession(toRefreshCommand(query)))
+                .then(seatQueryPort.findAllBySchedule(UUID.fromString(query.eventId()), query.scheduleId())
                                 .collectList()
                                 .map(this::groupByZone)
                 );
     }
 
+    private SessionPort.ValidateQuery toValidateQuery(SeatQuery query) {
+        return new SessionPort.ValidateQuery(
+                query.eventId(), query.scheduleId().toString(), query.sessionId()
+        );
+    }
+
+    private SessionPort.RefreshCommand toRefreshCommand(SeatQuery query) {
+        return new SessionPort.RefreshCommand(
+                query.eventId(), query.scheduleId().toString(), query.sessionId()
+        );
+    }
+
     private List<ZoneSeatsView> groupByZone(List<SeatView> seats) {
         return seats.stream()
-                .collect(Collectors.groupingBy(SeatView::getZone))
+                .collect(Collectors.groupingBy(SeatView::zone))
                 .entrySet().stream()
                 .map(entry -> new ZoneSeatsView(
                         entry.getKey(),
                         entry.getValue().stream()
-                                .sorted(Comparator.comparingInt(SeatView::getSeatNo))
-                                .collect(Collectors.toList())
+                                .sorted(Comparator.comparingInt(SeatView::seatNo))
+                                .toList()
                 ))
-                .sorted(Comparator.comparing(ZoneSeatsView::getZone))
-                .collect(Collectors.toList());
+                .sorted(Comparator.comparing(ZoneSeatsView::zone))
+                .toList();
     }
 }
